applications/ghost/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: default
  labels:
    app: ghost
    component: frontend
spec:
  replicas: 1 # 몇 개의 파드를 실행할지
  selector:
    matchLabels: # 이 라벨을 가진 파드를 관리
      app: ghost
      component: frontend
  template: # 파드를 찍어낼 template
    metadata:
      labels:
        app: ghost
        component: frontend
    spec:
      # 1. 초기화 컨테이너: Ghost 실행 전 S3 어댑터를 다운로드 받아 설치함
      containers: # 컨테이너 정의(도커)
        - name: ghost
          image: ghost:6.16.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2368 # Ghost 기본 포트
          volumeMounts: # PVC를 컨테이너 내부 경로에 연결
            - name: ghost-content
              mountPath: /var/lib/ghost/content
            # InitContainer가 다운로드 받은 어댑터를 여기 마운트
            - name: adapter-storage
              mountPath: /var/lib/ghost/content/adapters/storage

          resources:
            requests:
              cpu: "50m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
      volumes: # 파드에 달아줄 디스크 정의
        - name: ghost-content
          persistentVolumeClaim:
            claimName: ghost-content-pvc
        # 어댑터 파일 공유를 위한 빈 디스크 (파드 죽으면 삭제됨)
        - name: adapter-storage
          emptyDir: {}
